Seperated top and bottom images so content can stay in the middle

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
         <!-- <div class="container grid"> -->
 
             <section class="content">
-                <div class="content__background"></div>
+                <div class="content__background top"></div>
                 <header class="content__header">
                     <figure class="content__header__logo"></figure>
                 </header>  
+                <article class="content__textwrapper">
+                    <headder>
+                        <h1>The easiest Lorem Ipsum copy tool</h1>
+                    </headder>
+                    <h2></h2>
+                </article>
                 <div class="content__characters">
                     <figure class="content__characters__laptop"></figure>
                     <figure class="content__characters__mobile"></figure>
                 </div>
+                <div class="content__background--bottom"></div>
             </section>
-            <footer>
+            <footer class="content__background bottom">
             </footer>
         <!-- </div>              -->
     </main>
