Added the right background images and scaled wrappers to images, changed some styling for sections and text

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <main class="page">
         <!-- <div class="container grid"> -->
 
-            <section class="content">
-                <div class="content__background top"></div>
+          <section class="content">
+               <div class="content__background top"></div>
+                <!-- <img class="content__background" src="dist/img/Top_background-img.svg"></img> -->
                 <header class="content__header">
                     <figure class="content__header__logo"></figure>
                 </header>  
                 <article class="content__textwrapper">
                     <headder>
                         <h1>The easiest Lorem Ipsum copy tool</h1>
+                        <h2>This tool lets you easily choose your Lorem Ipsum and copy it with 1 button push</h2>
                     </headder>
                     <h2></h2>
                 </article>
@@ -26,9 +28,9 @@
                     <figure class="content__characters__mobile"></figure>
                 </div>
                 <div class="content__background--bottom"></div>
+                <footer class="content__background bottom">
+                </footer>
             </section>
-            <footer class="content__background bottom">
-            </footer>
         <!-- </div>              -->
     </main>
 <script src="dist/js/main.js"></script>
