Added new illustrations, cleaned up code, made the website more seo friendly

--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <html>
 <head>
     <title>Lorem Ipsum Copy</title>
     <link rel="stylesheet" type="text/css" href="dist/css/main.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet"> 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="Description" content="On this website you can copy the Lorem Ipsum text you need with just one simple click">
 </head>
 <body>
     <main class="page">
-        <!-- <div class="container grid"> -->
-
+        <!-- <div class="container grid"> -->   
+        <div class="background"></div>
           <section class="content">
-               <div class="content__background top"></div>
-                <!-- <img class="content__background" src="dist/img/Top_background-img.svg"></img> -->
-                <header class="content__header">
+               <!-- <div class="content__background content__background__middle_top"></div> 
+               <div class="content__background content__background__bottom_left"></div> 
+               <div class="content__background content__background__bottom_right"></div>  -->
+
+
+                <!-- <header class="content__header">
                     <figure class="content__header__logo"></figure>
-                </header>  
-                <article class="content__textwrapper">
+                </header>   -->
+                <!-- <article class="content__textwrapper">
                     <headder>
                         <h1>The easiest Lorem Ipsum copy tool</h1>
                         <h2>This tool lets you easily choose your Lorem Ipsum and copy it with 1 button push</h2>
                     </headder>
                     <h2></h2>
-                </article>
-                <div class="content__characters">
+                </article> -->
+                <!-- <div class="content__characters">
                     <figure class="content__characters__laptop"></figure>
                     <figure class="content__characters__mobile"></figure>
-                </div>
-                <div class="content__background--bottom"></div>
+                </div> -->
+                <!-- <div class="content__background--bottom"></div>
                 <footer class="content__background bottom">
-                </footer>
+                </footer> -->
             </section>
         <!-- </div>              -->
     </main>
