Added a grid layout for content, added main text and styling and position, added main cta button and styling

--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet"> 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="Description" content="On this website you can copy the Lorem Ipsum text you need with just one simple click">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <main class="page">
         <!-- <div class="container grid"> -->   
-        <div class="background"></div>
-          <section class="content">
+        <section class="content">
+              <article class="content__intro">
+                <h1 class="content__intro__title">
+                    Easily copy lorem ipsum with <span>1</span> button click
+                </h1>
+                <h2 class="content__intro__text">
+                    Why should getting content be hard? With just one click of the button you can copy all the Lorem Ipsum you need.
+                    No hard or even weird interactions.
+                    <br><br>
+                    <span>One click</span> is all you need! 
+                </h2>
+              </article>
+              <button class="content__cta">
+                  <h3>Press to copy<span>.</span></h3>
+            </button>
                <!-- <div class="content__background content__background__middle_top"></div> 
                <div class="content__background content__background__bottom_left"></div> 
                <div class="content__background content__background__bottom_right"></div>  -->
@@ -34,7 +51,8 @@
                 <!-- <div class="content__background--bottom"></div>
                 <footer class="content__background bottom">
                 </footer> -->
-            </section>
+            </section>      
+        <div class="background"></div>
         <!-- </div>              -->
     </main>
 <script src="dist/js/main.js"></script>
