Positioned cta better and made a hover animation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 </h2>
               </article>
               <button class="content__cta">
-                  <h3>Press to copy<span>.</span></h3>
+                  <h3>Press to copy
+                    <div class="content__cta__dot"></class>
+                </h3>
+                <!-- <h3>Press to copy<span>.</span></h3> -->
             </button>
                <!-- <div class="content__background content__background__middle_top"></div> 
                <div class="content__background content__background__bottom_left"></div> 
